# ida-claude

./: .gitignore  README.md  ida_claude.py  pyproject.toml
ida_claude/: __init__.py  client.py  config.py  conversation.py  loop.py  plugin.py  widget.py
ida_claude/tools/: __init__.py  ida.py
