[project]
name = "ida-claude"
version = "0.1.0"
description = "Claude AI assistant for IDA Pro"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "markdown>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# E = pycodestyle errors
# F = pyflakes
# W = pycodestyle warnings
# I = isort
# UP = pyupgrade
# B = flake8-bugbear
# SIM = flake8-simplify
ignore = [
    "E501",  # line too long (formatter handles)
    "B008",  # function call in default arg (needed for IDA)
]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
